mejoras en la visualización de las miniaturas en la lista de capturas de timelapse
